welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: ')' expected but '[' found.
	if (S1==10 [|| S2==10 || S3==10) {
                   ^